fix(markdown): wrong background of highlighted tokens

--- a/src/typography.less
+++ b/src/typography.less
@@ -14,6 +14,14 @@
   }
   pre[class*="language-"] {
     font-size: 0.92em;
+
+    .token.operator,
+    .token.entity,
+    .token.url,
+    .language-css .token.string,
+    .style .token.string {
+      background-color: inherit;
+    }
   }
 
   span.image-alt {
